--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
 						</div>
 						<h2 class="section-heading">What Can We Do?</h2>
 						<p>We can’t afford to wait quietly.</p>
-						<p>We must raise awareness about what’s at stake. Viral movements like the Ice Bucket Challenge reminded the world that visibility can turn into action and action into funding. Public consciousness matters.</p>
+						<p>We must raise awareness about what’s at stake. Viral movements like the Ice Bucket Challenge showed how raising awareness can lead to action and funding. Public consciousness matters.</p>
 						<p>Contact your representatives. Demand clarity and accountability. Ask them why life-saving research is being used as a political pawn. Urge them to restore funding and protect the autonomy of our research institutions.</p>
-						<p>Medical research is not optional. It is the very foundation of public health, medical advancement, and human dignity. We must fight to protect it.</p>
+						<p>Medical research is not optional. It is the foundation of public health and medical advancement. We must fight to protect it.</p>
 						<h4>Sources</h4>
 						<p>“How U.S. Colleges Are Navigating Cuts to Grants for Research After Trump Restricts Federal Funding.” PBS News, 28 Mar. 2025, www.pbs.org/newshour/education/how-u-s-colleges-are-navigating-cuts-to-grants-for-research-after-trump-restricts-federal-funding.</p>
 						<p>Boyle, Patrick. “What’s at Stake When Clinical Trials Research Gets Cut.” AAMC, 25 Apr. 2025, www.aamc.org/news/whats-stake-when-clinical-trials-research-gets-cut.</p>
